--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- title -->
-    <title>NFT Marketplace</title>
+    <title>Проект Пиццы</title>
     <!-- style sheet -->
      <link rel="stylesheet" href="./style/style.css">
 </head>
@@ -14,7 +14,7 @@
     <!-- header -->
      <header>
         <nav class="navbar">
-            <div class="logo"></div>
+            <div class="logo"><h2>pizzashop</h2></div>
         </nav>
      </header>
 </body>
