--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- title -->
-    <title>Проект Пиццы</title>
+    <title>Neuralink</title>
     <!-- style sheet -->
-     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
     <!-- header -->
-     <header>
-        <nav class="navbar">
-            <div class="logo"><h2>pizzashop</h2></div>
+    <header>
+        <nav class="navbar container">
+            <div class="logo">
+                <img src="./img/svg/Frame.svg" alt="">
+            </div>
+            <div>
+                <ul class="nav_menu">
+                    <li><a href="#">Science</a></li>
+                    <li><a href="#">Approach</a></li>
+                    <li><a href="#">Applications</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+            </div>
         </nav>
-     </header>
-    </body>
+        <div class="container hero">
+            <div class="hero_box container">
+                <h1>Breakthrough</h1>
+                <h1>Technology</h1>
+                <h1>for the Brain</h1>
+            </div>
+        </div>
+    </header>
+</body>
 
 </html>
