--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Neuralink</title>
     <!-- style sheet -->
     <link rel="stylesheet" href="./style/style.css">
+    <!-- remix icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+        integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -32,6 +36,15 @@
                 <h1>Breakthrough</h1>
                 <h1>Technology</h1>
                 <h1>for the Brain</h1>
+                <hr class="hr" style="background-color: #fff; height: 2px; border: none;">
+                <div class="header_div">
+                    <div class="header_div">
+                        <h2>Join the Team <i class="ri-arrow-right-line"></i></h2>
+                    </div>
+                    <div>
+                        <h2>Watch the update <i class="ri-arrow-right-line"></i></h2>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
