--- a/index.html
+++ b/index.html
@@ -48,6 +48,39 @@
             </div>
         </div>
     </header>
+    <!-- main -->
+    <main>
+        <!-- Card section -->
+        <section class="card_parent container">
+            <div class="card_box">
+                <div class="container">
+                    <h2>Understanding
+                        the Brain </h2>
+                    <hr class="hr">
+                    <img src="./img/png/Rectangle (1).png" alt="">
+                    <h3>Science <i class="ri-arrow-right-line"></i></h3>
+                </div>
+            </div>
+            <div class="card_box2">
+                <div class="container">
+                    <h2>Interfacing
+                        with the Brain </h2>
+                    <hr class="hr">
+                    <img src="./img/png/Rectangle (2).png" alt="">
+                    <h3>Approach <i class="ri-arrow-right-line"></i></h3>
+                </div>
+            </div>
+            <div class="card_box3">
+                <div class="container">
+                    <h2>Engineering
+                        with the Brain </h2>
+                    <hr class="hr">
+                    <img src="./img/png/Rectangle (3).png" alt="">
+                    <h3>Applications <i class="ri-arrow-right-line"></i></h3>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
