--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
                 </div>
             </div>
         </section>
+        <!-- Create section -->
+        <section class="create ">
+            <div class="container credit_box">
+                <h1>Create the
+                    Future with Us</h1>
+                <hr class="hr">
+                <p>Every day we’re building better tools for communicating with the brain. With the right team, the
+                    applications for this technology are limitless.</p>
+                <h3>Reach Out <i class="ri-arrow-right-line"></i></h3>
+            </div>
+        </section>
     </main>
 </body>
 
