--- a/index.html
+++ b/index.html
@@ -92,6 +92,28 @@
             </div>
         </section>
     </main>
+    <!-- footer -->
+    <footer class="container">
+        <div class="footer_logo">
+            <img src="./img/svg/Frame (1).svg" alt="">
+            <p>© Neuralink 2021
+                All Rights Reserved.</p>
+        </div>
+        <div class="footer_box2">
+            <div>
+                <p>Science</p>
+                <p>Approach</p>
+                <p>Applications</p>
+                <p>About Us</p>
+                <p>Careers</p>
+            </div>
+            <div class="footer_contact">
+                <p>info@neuralink.com</p>
+                <p>@neuralink</p>
+                <input type="email" required placeholder="ENTER EMAIL FOR UPDATES " >
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
